@@ -1,3 +1,9 @@
+BOARD18 2.2.2 Release Notes
+
+Changes from 2.2.1 Release:
+Fixed some typos in loadGameBox.php
+Fixed more typos in board18Boxes.php.
+
 BOARD18 2.2.1 Release Notes
 
 Changes from 2.2.0 Release:
